--- a/dom/desafio-02/index.html
+++ b/dom/desafio-02/index.html
@@ -6,10 +6,10 @@
         <button v-on:click="clicouAqui">Exibir Alerta</button>
     </div>
     
-    <!-- 2) Escute o evento "keydown" e armazene o valor na propriedade
+    <!-- 2) Escute o evento "keyup" e armazene o valor na propriedade
         data (dica: event.target.value) -->
     <div>
-        <input v-on:keydown="armazenarValor" type="text">
+        <input v-on:keyup="valor = $event.target.value" type="text">
         <p>{{ valor }}</p>
     </div>
     
