--- a/condicionais-e-listas/condicionais.html
+++ b/condicionais-e-listas/condicionais.html
@@ -4,10 +4,12 @@
 
 <div id="app">
     <p v-if="logado">Usuário Logado: {{nome}}</p>
+    <p v-else-if="anonimo">Navegando como Anônimo</p>
     <p v-else>Nenhum usuário logado</p>
     <button @click="logado = !logado">
         {{logado ? 'Sair' : 'Entrar'}}
     </button>
+    <input type="checkbox" v-model="anonimo">
 </div>
 
 <script>
@@ -15,7 +17,8 @@
         el: '#app',
         data: {
             nome: 'Maria',
-            logado: false
+            logado: false,
+            anonimo: false
         }
     });
 </script>
