--- a/condicionais-e-listas/condicionais.html
+++ b/condicionais-e-listas/condicionais.html
@@ -6,6 +6,9 @@
     <!-- INFO:
         v-if: remove e inclui elementos em tela, não trabalhando utilizando hide e show
         template: elemento vue usado para se agrupar outros elementos internos, o mesmo não é exibido em tela diferente de div e outros.
+        v-show:
+            - utiliza show e hide( display: none)
+            -computacionalmente menos custoso que o v-if, pois não apaga e insere os elementos.
     -->
     <template v-if="logado">
         <p>Usuário Logado: {{nome}}</p>
@@ -17,6 +20,13 @@
         {{logado ? 'Sair' : 'Entrar'}}
     </button>
     <input type="checkbox" v-model="anonimo">
+    <hr>
+    <footer v-show="logado">
+        Footer para logados
+    </footer>
+    <footer v-show="!logado">
+        Footer para deslogados
+    </footer>
 </div>
 
 <script>
