--- a/condicionais-e-listas/listas.html
+++ b/condicionais-e-listas/listas.html
@@ -3,9 +3,30 @@
 <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 
 <div id="app">
-    <ul>
-        <li v-for="cor in cores">{{ cor }}</li>
+    <ul style="list-style: none;">
+        <!-- <li v-for="cor in cores">{{ cor }}</li> -->
+        <!-- <li v-for="(cor, i) in cores">{{ i + ") " + cor }}</li> -->
+        <!-- ideal que key seja uma identificação exclusiva de cada item -->
+        <li v-for="(cor, i) in cores" :key="cor">{{i}}) {{cor}}</li>
+        <button @click="cores.push('branco')">Adiciona Cor</button>
+        <!-- também é possivel se utilizar com templates -->
+        <template v-for="(cor, i) in cores">
+            <h1>{{ cor }}</h1>
+            <p>{{ i }}</p>
+        </template>
     </ul>
+
+    <hr>
+
+    <ul>
+        <li v-for="pessoa in pessoas">
+            <p v-for="(valor, chave, index) in pessoa">
+                {{ index + 1}}: {{ chave }}: {{ valor }}
+            </p>
+        </li>
+    </ul>
+    <!-- iterando sobre numeros -->
+    <span v-for="n in 10" :key="index"> {{n}}</span>
 </div>
 
 <script>
