--- a/condicionais-e-listas/desafio-05/index.html
+++ b/condicionais-e-listas/desafio-05/index.html
@@ -1,4 +1,4 @@
-<script src="https://unpkg.com/vue"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
 <script src="app.js"></script>
 
 <div id="desafio">
@@ -7,18 +7,18 @@
     para ver a diferença -->
   <h2>#01</h2>
   <div>
-    <button>Alternar</button>
-    <p>Você quer me ver ...</p>
-    <p>...ou eu</p>
-    <p>Você quer me ver ...</p>
-    <p>...ou eu</p>
+    <button @click="alternar = !alternar">Alternar</button>
+    <p v-if="alternar">Você quer me ver ...</p>
+    <p v-else="">...ou eu</p>
+    <p v-show="alternar">Você quer me ver ...</p>
+    <p v-show="!alternar">...ou eu</p>
   </div>
 
   <!-- 2) Exiba em uma <ul> um array de elementos da sua escolha.
     Imprima também o índice de cada elemento. -->
   <h2>#02</h2>
   <ul>
-    <li></li>
+    <li v-for="(item, index) in array" :key="index">{{index}} - {{item}}</li>
   </ul>
   
   <!-- 3) Imprimir todos os pares de valor-chave do objeto a seguir:
@@ -30,7 +30,7 @@
     Imprima também o índice de cada item. -->
   <h2>#03</h2>
   <ul>
-    <li></li>
+    <li v-for="(item, chave, index) in livro" :key="index">{{index}} - {{chave}}: {{item}}</li>
   </ul>
   
   <!-- 4) Imprima o seguinte objeto (somente os valores) e
@@ -43,8 +43,13 @@
     (dica: use v-for e v-if na resolução) -->
   <h2>#04</h2>
   <ul>
-    <li>
-    
+    <li v-for="item in aluno">
+        <span v-if="!Array.isArray(item)">  
+          {{ item }}
+        </span>
+        <span v-else="" v-for="subItem in item">
+          {{subItem}}
+        </span>
     </li>
   </ul>
 </div>
