--- a/projeto-01-monstro/index.html
+++ b/projeto-01-monstro/index.html
@@ -33,7 +33,10 @@
                 <div>{{ monsterLife }}</div>
             </div>
         </div>
-        <div class="panel result"></div>
+        <div class="panel result">
+            <div v-if="monsterLife == 0" class="win">Você Ganhou!!!</div>
+            <div v-else class="lose">PERDEU!!!</div>
+        </div>
         <div class="panel buttons"></div>
         <div class="panel logs"></div>
     </div>
