--- a/projeto-01-monstro/index.html
+++ b/projeto-01-monstro/index.html
@@ -37,7 +37,15 @@
             <div v-if="monsterLife == 0" class="win">Você Ganhou!!!</div>
             <div v-else class="lose">PERDEU!!!</div>
         </div>
-        <div class="panel buttons"></div>
+        <div class="panel buttons">
+            <template v-if="running">
+                <button class="btn attack">Ataque</button>
+                <button class="btn special-attack">Ataque Especial</button>
+                <button class="btn heal">Curar</button>
+                <button class="btn give-up">Desistir</button>
+            </template>
+            <button v-else class="btn new-game">Iniciar Jogo</button>
+        </div>
         <div class="panel logs"></div>
     </div>
     <script src="app.js"></script>
