--- a/projeto-01-monstro/index.html
+++ b/projeto-01-monstro/index.html
@@ -33,14 +33,16 @@
                 <div>{{ monsterLife }}</div>
             </div>
         </div>
-        <div class="panel result">
+        <div v-if="hasResult" class="panel result">
             <div v-if="monsterLife == 0" class="win">Você Ganhou!!!</div>
             <div v-else class="lose">PERDEU!!!</div>
         </div>
         <div class="panel buttons">
             <template v-if="running">
-                <button class="btn attack">Ataque</button>
-                <button class="btn special-attack">Ataque Especial</button>
+                <button @click="attack(false)"
+                    class="btn attack">Ataque</button>
+                <button @click="attack(true)"
+                 class="btn special-attack">Ataque Especial</button>
                 <button class="btn heal">Curar</button>
                 <button @click="running = false"
                     class="btn give-up">Desistir</button>
