--- a/projeto-01-monstro/index.html
+++ b/projeto-01-monstro/index.html
@@ -42,7 +42,7 @@
                 <button @click="attack(false)"
                     class="btn attack">Ataque</button>
                 <button @click="attack(true)"
-                 class="btn special-attack">Ataque Especial</button>
+                    class="btn special-attack">Ataque Especial</button>
                 <button @click="healAndHurt"
                     class="btn heal">Curar</button>
                 <button @click="running = false"
@@ -51,7 +51,9 @@
             <button v-else @click="startGame"
                 class="btn new-game">Iniciar Jogo</button>
         </div>
-        <div class="panel logs"></div>
+        <div v-if="logs.length"
+            class="panel logs">
+        </div>
     </div>
     <script src="app.js"></script>
 </body>
