--- a/projeto-01-monstro/index.html
+++ b/projeto-01-monstro/index.html
@@ -53,6 +53,11 @@
         </div>
         <div v-if="logs.length"
             class="panel logs">
+            <ul>
+                <li v-for="log in logs"
+                    :class="log.cls"
+                    class="log">{{ log.text }}</li>
+            </ul>
         </div>
     </div>
     <script src="app.js"></script>
